# DoomsdayPath

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DoomsdayPath-v0.8.0-aligned.apk.idsig
android/: AndroidManifest.xml  build.gradle
build-android/: .ninja_deps  .ninja_log  android-DoomsdayPath-deployment-settings.json  build.ninja
build-android/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-android/android-build/: AndroidManifest.xml  build.gradle  debug.keystore
build-android/android-build/res/values/: libs.xml
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: Action.cpp  Action.h  BackpackPage.cpp  BackpackPage.h  ContainerPage.cpp  ContainerPage.h  DifficultyFactor.cpp  DifficultyFactor.h  GameMenuPage.cpp  GameMenuPage.h  GamePage.cpp  GamePage.h  GameTime.cpp  GameTime.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  LoadGamePage.cpp  LoadGamePage.h  LoadingPage.cpp  LoadingPage.h  MainMenuPage.cpp  MainMenuPage.h  MainWindow.cpp  MainWindow.h  MapElement.cpp  MapElement.h  MapPage.cpp  MapPage.h  MapTile.h  NewGamePage.cpp  NewGamePage.h  PlayerStats.cpp  PlayerStats.h  SavePage.cpp  SavePage.h  SaveSystem.cpp  SaveSystem.h  SettingsPage.cpp  (+8 more)
